# android-usbutils

./: .travis.yml  configure.ac  names.c
android/: README
android/jni/: Android.mk  Application.mk  libuhd.mk  usbutils.mk
